# rust_blog

./: .env  .env.example  Cargo.toml  LICENCE  readme.md  routes.md
migrations/2023-02-13-122122_create_users/: up.sql
migrations/2023-02-13-122126_create_posts/: up.sql
migrations/2023-02-13-122142_create_access_tokens/: up.sql
src/: controllers.rs  guards.rs  main.rs  models.rs  schema.rs
src/controllers/: post_controller.rs  token_controller.rs  user_controller.rs
src/guards/: autheduser.rs  recivedtoken.rs
