[package]
name = "crud_with_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha256 = "1.1.2"
regex = "1.7.1"
rand = "0.8.5"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[dependencies.serde]
version = "1.0.152"
features = ["derive"]

[dependencies.chrono]
version = "0.4.23"
features = ["serde"]

[dependencies.diesel]
version = "2.0.0"
features = ["postgres","chrono"]

[dependencies.dotenvy]
version = "0.15"